--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,15 @@ version: 0.1.3
 homepage: https://github.com/mhmzdev/awesome_snackbar_content
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.17.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  flutter_svg: ^2.0.4
+  flutter_svg: ">2.0.0"
 
   flutter:
     sdk: flutter
-    
-  flutter_localizations:
-    sdk: flutter
+
 
 dev_dependencies:
   flutter_test:
